# FutagAssist

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md  coding_conventions.md  dependency_management.md  development_environment.md  project_structure.md  python_version.md  security.md
config/: default.yaml  libs_projects.yaml
docs/: ANALYZE_STAGE.md  ARCHITECTURE.md  BUILD_WITH_CODEQL.md  COMPILE_STAGE.md  CONFIGURATION.md  FUZZ_BUILD_STAGE.md  FUZZ_STAGE.md  GENERATE_STAGE.md  LLM_PLUGINS.md  PLUGINS.md  QUICKSTART.md  REPORT_STAGE.md
output/: functions.json
plugins/cpp/: api_functions.ql  cpp_analyzer.py  function_calls.ql  function_details.ql  fuzz_targets.ql  includes.ql  init_cleanup_pairs.ql  list_functions.ql  parameter_semantics.ql  qlpack.yml
plugins/fuzzer/: aflpp_engine.py  libfuzzer_engine.py
scripts/: README.md  download_projects.py
src/futagassist/: __init__.py  (+1 more)
tests/: __init__.py  _helpers.py  conftest.py  test_analyze_stage.py  test_build_log.py  test_build_orchestrator.py  test_build_stage.py  test_cli.py  test_codeql_injector.py  test_codeql_runner.py  test_compile_stage.py  test_config.py  test_context_builder.py  test_cpp_analyzer.py  test_fuzz_build_stage.py  test_fuzz_stage.py  test_fuzzer_engines.py  test_generate_stage.py  test_health.py  test_json_reporter.py  test_llm_analyze.py  test_llm_providers.py  test_param_analyzer.py  test_pipeline.py  test_plugin_loader.py  test_readme_analyzer.py  test_registry.py  test_report_stage.py  test_reporters.py  test_run_command.py  test_schema.py  test_utils.py
(+38 files in other folders)
