[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "futagassist"
version = "0.1.0"
description = "An intelligent fuzzing assistant using CodeQL and LLMs"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
futagassist = "futagassist.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/futagassist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
